# Changelog for the Romanesco pattern library

## Romanesco 0.10.0

New features:
- Add option to divide columns horizontally or celled

Fixes and improvements:
- Split PatternLab package into Romanesco Patterns and Backyard [BC]
- Change / fix all paths related to old PatternLab package

---

## Romanesco 0.9.1
Released on June 28, 2016

New features:
- Add Slider / Gallery combo CB

Fixes and improvements:
- Organize front-end dependencies in assets/vendor folder

---

## Romanesco 0.9.0
Released on June 22, 2016

New features:
- Add front-end pattern library
- Add templates for Team and Testimonial
- Add templates for Clients and Portfolio

Fixes and improvements:
- Refactor overview elements for better reusability [BREAKING CHANGES]
- Load FormBlocks fieldset layout with chunk
- Display syntax highlighted code snippets with Prism.js
- Fix layout backgrounds not working on subdomains
- Fix adding tables and links with Redactor

---

## Romanesco 0.8.1
Released on May 5, 2016

New features:
- Add status grid for keeping track of progress per page

Fixes and improvements:
- Use snippets in JSON config files for assigning templates

---

## Romanesco 0.8.0
Released on May 5, 2016

New features:
- Add content blocks for arranging content in tabs
- Add Twitter content block

Fixes and improvements:
- Add changelog
- Add symlink for backgrounds.css to web context
- Flexible sidebar width on CB layouts containing a sidebar
- Assign categories to CB elements
- Fix header image and title inheritance
- Fix broken image sliders
- Update jQuery to 2.1.4 and add local fallback for CDN

ContentBlocks added or edited:
- [Field - New] Tabs (Rich Text)
- [Field - New] Tabs (Flexible Content)
- [Field - New] Twitter feed
- [Layout - Updated] Content + Sidebar
- [Layout - Updated] Sidebar + Content
- [Layout - Updated] Content + Sidebar (Nested)
- [Layout - Updated] Sidebar + Content (Nested)