@@ -4,7 +4,7 @@
             "tvs": [
                 {
                     "caption": "Email address recipient",
-                    "name": "fb_email_to",
+                    "name": "cb_email_to",
                     "description": "Submitted forms will be sent to this address. If this field is empty, the form will be sent to the default email address of the website (which can be found under Extras > Configuration).",
                     "category": "Settings - Email",
                     "sortOrder": "1",
@@ -12,7 +12,7 @@
                     "templates": ["fbForm"]
                 },{
                     "caption": "Email CC address",
-                    "name": "fb_email_cc",
+                    "name": "cb_email_cc",
                     "description": "Optional.",
                     "category": "Settings - Email",
                     "sortOrder": "2",
@@ -20,7 +20,7 @@
                     "templates": ["fbForm"]
                 },{
                     "caption": "Email BCC address",
-                    "name": "fb_email_bcc",
+                    "name": "cb_email_bcc",
                     "description": "Optional.",
                     "category": "Settings - Email",
                     "sortOrder": "3",
@@ -28,7 +28,7 @@
                     "templates": ["fbForm"]
                 },{
                     "caption": "Email FROM address",
-                    "name": "fb_email_from",
+                    "name": "cb_email_from",
                     "description": "Optional. Defaults to emailsender system setting.",
                     "category": "Settings - Email",
                     "sortOrder": "5",
@@ -36,7 +36,7 @@
                     "templates": ["fbForm"]
                 },{
                     "caption": "Email FROM name",
-                    "name": "fb_email_from_name",
+                    "name": "cb_email_from_name",
                     "description": "Optional. Defaults to site_name system setting.",
                     "category": "Settings - Email",
                     "sortOrder": "6",
@@ -44,14 +44,14 @@
                     "templates": ["fbForm"]
                 },{
                     "caption": "Email subject",
-                    "name": "fb_email_subject",
+                    "name": "cb_email_subject",
                     "category": "Settings - Email",
                     "sortOrder": "10",
                     "type": "text",
                     "templates": ["fbForm"]
                 },{
                     "caption": "Redirect page",
-                    "name": "fb_redirect_id",
+                    "name": "cb_redirect_id",
                     "description": "Enter the ID of the page, or drag the page from the menu tree to this input field.",
                     "category": "Settings - General",
                     "sortOrder": "90",
@@ -59,7 +59,7 @@
                     "templates": ["fbForm"]
                 },{
                     "caption": "Text in submit button",
-                    "name": "fb_submit_button",
+                    "name": "cb_submit_button",
                     "description": "Defaults to Send.",
                     "category": "Settings - General",
                     "sortOrder": "92",
@@ -67,7 +67,7 @@
                     "templates": ["fbForm"]
                 },{
                     "caption": "Layout type",
-                    "name": "fb_form_layout",
+                    "name": "cb_form_layout",
                     "description": "Stacked means the labels are always above the input fields, Horizontal means the labels are next to the fields, Inline means everything is on 1 row (so only for very small forms).",
                     "category": "Settings - General",
                     "sortOrder": "5",
@@ -77,7 +77,7 @@
                     "templates": ["fbForm"]
                 },{
                     "caption": "Dynamic recipient address",
-                    "name": "fb_email_to_dynamic",
+                    "name": "cb_email_to_dynamic",
                     "description": "You can place any snippet / FastField call here that outputs a single email address. Retrieve something inside a resource by using the [[+current_id]] value. WARNING: populating this field will override the default recipient address, so test thoroughly!",
                     "category": "Settings - Advanced",
                     "sortOrder": "1",
@@ -85,7 +85,7 @@
                     "templates": ["fbForm"]
                 },{
                     "caption": "Email template",
-                    "name": "fb_email_template",
+                    "name": "cb_email_template",
                     "description": "Optional. Name of the chunk containing your own customized (HTML) email template. Make sure there is a [[+content]] placeholder in there for listing the fields.",
                     "category": "Settings - Advanced",
                     "sortOrder": "20",
@@ -93,7 +93,7 @@
                     "templates": ["fbForm"]
                 },{
                     "caption": "Email template rows",
-                    "name": "fb_email_template_rows",
+                    "name": "cb_email_template_rows",
                     "description": "Optional. Name of the chunk containing the customized HTML for the template rows. This will be used to display each individual field in your email. Use [[+label]] and [[+value]] placeholders to show the content.",
                     "category": "Settings - Advanced",
                     "sortOrder": "21",
@@ -101,7 +101,7 @@
                     "templates": ["fbForm"]
                 },{
                     "caption": "Autoresponder",
-                    "name": "fb_autoresponder_toggle",
+                    "name": "cb_autoresponder_toggle",
                     "description": "IMPORTANT! For the autoresponder to know which email address to use, the Input (Email) field needs to be present in the form.",
                     "category": "Autoresponder",
                     "sortOrder": "1",
@@ -111,7 +111,7 @@
                     "templates": ["fbForm"]
                 },{
                     "caption": "Autoresponder FROM address",
-                    "name": "fb_autoresponder_from",
+                    "name": "cb_autoresponder_from",
                     "description": "Optional. This is the address where the messages appear to be sent from. Can be a non-existing address, like noreply@yourdomain.com. Defaults to emailsender system setting.",
                     "category": "Autoresponder",
                     "sortOrder": "2",
@@ -119,7 +119,7 @@
                     "templates": ["fbForm"]
                 },{
                     "caption": "Autoresponder FROM name",
-                    "name": "fb_autoresponder_from_name",
+                    "name": "cb_autoresponder_from_name",
                     "description": "Optional. This is the name that will (probably) be visible in the recipients' inbox. Defaults to site_name system setting.",
                     "category": "Autoresponder",
                     "sortOrder": "3",
@@ -127,7 +127,7 @@
                     "templates": ["fbForm"]
                 },{
                     "caption": "Autoresponder REPLY TO address",
-                    "name": "fb_autoresponder_reply_to",
+                    "name": "cb_autoresponder_reply_to",
                     "description": "Optional. This address will be used when recipient replies to this message directly. Defaults to respectively the client_email and emailsender system setting.",
                     "category": "Autoresponder",
                     "sortOrder": "4",
@@ -135,7 +135,7 @@
                     "templates": ["fbForm"]
                 },{
                     "caption": "Autoresponse subject",
-                    "name": "fb_autoresponder_subject",
+                    "name": "cb_autoresponder_subject",
                     "description": "",
                     "category": "Autoresponder",
                     "sortOrder": "10",
@@ -143,7 +143,7 @@
                     "templates": ["fbForm"]
                 },{
                     "caption": "Autoresponse message",
-                    "name": "fb_autoresponder_message",
+                    "name": "cb_autoresponder_message",
                     "description": "The content of the email that will be sent. You can use placeholders here from the form fields you used. Just use the syntax [[+fb123-field-name]], so complete with prefix and correct name of the input field.",
                     "category": "Autoresponder",
                     "sortOrder": "11",
@@ -174,44 +174,54 @@
 
         "systemSettings": [
             {
-                "key": "fb_container_id",
+                "key": "container_id",
+                "namespace": "formblocks",
                 "type": "textfield",
                 "area": "FormBlocks - Pages"
             },{
-                "key": "fb_save_form",
+                "key": "save_form",
+                "namespace": "formblocks",
                 "type": "combo-boolean",
                 "area": "FormBlocks - Settings",
                 "value": "1"
             },{
-                "key": "fb_input_textfield_id",
+                "key": "cb_input_textfield_id",
+                "namespace": "formblocks",
                 "type": "textfield",
                 "area": "FormBlocks - CB fields"
             },{
-                "key": "fb_input_textarea_id",
+                "key": "cb_input_textarea_id",
+                "namespace": "formblocks",
                 "type": "textfield",
                 "area": "FormBlocks - CB fields"
             },{
-                "key": "fb_input_email_id",
+                "key": "cb_input_email_id",
+                "namespace": "formblocks",
                 "type": "textfield",
                 "area": "FormBlocks - CB fields"
             },{
-                "key": "fb_select_option_id",
+                "key": "cb_select_option_id",
+                "namespace": "formblocks",
                 "type": "textfield",
                 "area": "FormBlocks - CB fields"
             },{
-                "key": "fb_select_option_collapse_id",
+                "key": "cb_select_option_collapse_id",
+                "namespace": "formblocks",
                 "type": "textfield",
                 "area": "FormBlocks - CB fields"
             },{
-                "key": "fb_select_dropdown_id",
+                "key": "cb_select_dropdown_id",
+                "namespace": "formblocks",
                 "type": "textfield",
                 "area": "FormBlocks - CB fields"
             },{
-                "key": "fb_select_dropdown_auto_id",
+                "key": "cb_select_dropdown_auto_id",
+                "namespace": "formblocks",
                 "type": "textfield",
                 "area": "FormBlocks - CB fields"
             },{
-                "key": "fb_accept_terms_id",
+                "key": "cb_accept_terms_id",
+                "namespace": "formblocks",
                 "type": "textfield",
                 "area": "FormBlocks - CB fields"
             }
